k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmix-k8s
  namespace: kl3init-dev
  labels:
    app: jmix-k8s

spec:
  replicas: 1
  selector:
    matchLabels:
      app: jmix-k8s

  template:
    metadata:
      labels:
        app: jmix-k8s

    spec:
      serviceAccountName: hazelcast-sa

      containers:
        - name: jmix-k8s
          image: docker.io/kl3init/jmix-k8s:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
