k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jmix-app-service
spec:
  selector:
    app: jmix-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: hazelcast
      port: 5701
      targetPort: 5701
