k8s/03-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jmix-app
  namespace: kl3init-dev
spec:
  to:
    kind: Service
    name: jmix-app
  port:
    targetPort: http
  tls:
    termination: edge
