k8s/06-load-balancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jmix-app-ingress
  namespace: kl3init-dev
  annotations:
    route.openshift.io/termination: edge
    haproxy.router.openshift.io/timeout: 5m

spec:
  ingressClassName: openshift-default

  rules:
    - host: jmix-app.kl3init-dev.svc.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jmix-app
                port:
                  number: 8080

  tls:
    - hosts:
        - jmix-app.kl3init-dev.svc.cluster.local
