k8s/10-nginx-jmix-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: kl3init-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:stable
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: kl3init-dev
spec:
  selector:
    app: nginx
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-proxy
  namespace: kl3init-dev
  annotations:
    haproxy.router.openshift.io/disable_cookies: "false"
    haproxy.router.openshift.io/set-forwarded-headers: "append"
    haproxy.router.openshift.io/timeout: 60s
spec:
  to:
    kind: Service
    name: nginx
  port:
    targetPort: 8080
  tls:
    termination: edge
